fixed layout issues

--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -17,7 +17,7 @@ body.home {
     }
     .play-button {
       position: absolute;
-      bottom: 35vh;
+      bottom: 50vh;
       left: 23vw;
       transform: translateX(-50%);
       padding: 10px 40px;
