--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -1,26 +1,40 @@
 body {
-	background-color: $bg-color;
-	font-family: $font-family;
-	margin: 0;
-	padding: 0;
-	margin-top: 70px;
-	min-height: 100vh;
-	display: flex;
-	flex-direction: column;
+  background-color: $bg-color;
+  font-family: $font-family;
+  margin: 0;
+  padding: 0;
+  margin-top: 70px;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+body.sign-in,
+body.sign-up {
+  margin-top: 0;
+}
+
+header {
+  padding: 0;
+  margin: 0;
 }
 
 .sign-in,
 .sign-up {
-	background-image: url('../images/sign-in.png');
+  background-image: url('../images/sign-in.png');
 }
 
 .account-logo {
-	display: flex;
-	align-items: center;
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  padding: 0;
+  margin: 0;
 
-	img {
-		width: auto;
-		height: 100px;
-		margin: 10px;
-	}
+  img {
+    width: auto;
+    height: 100px;
+    margin: 0;
+    display: block;
+  }
 }
