--- a/scss/_misc-pages.scss
+++ b/scss/_misc-pages.scss
@@ -87,7 +87,7 @@
         background-color: #fff;
         color: #373737;
         border: 1px solid #ccc;
-        border-radius: 20px;
+        border-radius: 5px;
         cursor: pointer;
         transition: background-color 0.3s ease;
 
